--- a/AutopartsEntity/AutopartsEntity.csproj
+++ b/AutopartsEntity/AutopartsEntity.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AutopartsCore\AutopartsCore.csproj" />
+  </ItemGroup>
+
 </Project>
