--- a/AutopartsService/AutopartsService.csproj
+++ b/AutopartsService/AutopartsService.csproj
@@ -7,11 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AutoMapper\Catalog\" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <ProjectReference Include="..\AutopartsEntity\AutopartsEntity.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="FluentValidation\Catalog\BrandValidation\" />
+    <Folder Include="FluentValidation\Catalog\BrandInformationValidation\" />
+    <Folder Include="FluentValidation\Catalog\CountryValidation\" />
+    <Folder Include="FluentValidation\Catalog\CurrencyValidation\" />
   </ItemGroup>
 
 </Project>
