CountryCurrencyWarranty-validace-OK,CRUD-OK

--- a/AutopartsEntity/AutopartsEntity.csproj
+++ b/AutopartsEntity/AutopartsEntity.csproj
@@ -7,11 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Identity\Entities\AutopartsRole.cs" />
+    <Compile Remove="Identity\Entities\AutopartsUser.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AutopartsCore\AutopartsCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Identity\Entities\" />
+    <Folder Include="Identity\ViewModels\" />
   </ItemGroup>
 
 </Project>
