--- a/AutopartsService/AutopartsService.csproj
+++ b/AutopartsService/AutopartsService.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Extensions\Identity\IdentityExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
@@ -16,6 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\AutopartsEntity\AutopartsEntity.csproj" />
     <ProjectReference Include="..\AutopartsRepository\AutopartsRepository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\Identity\" />
   </ItemGroup>
 
 </Project>
