--- a/AutopartsService/AutopartsService.csproj
+++ b/AutopartsService/AutopartsService.csproj
@@ -8,12 +8,18 @@
 
   <ItemGroup>
     <Compile Remove="Extensions\Identity\IdentityExtensions.cs" />
+    <Compile Remove="Services\Catalog\Implementations\EngineService.cs" />
+    <Compile Remove="Services\Catalog\Implementations\PkwService.cs" />
+    <Compile Remove="Services\Catalog\Implementations\TechnicalDataService.cs" />
+    <Compile Remove="Services\Catalog\Interfaces\IEngineService.cs" />
+    <Compile Remove="Services\Catalog\Interfaces\IPkwService.cs" />
+    <Compile Remove="Services\Catalog\Interfaces\ITechnicalDataService.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
